Bug 93514 - weston fullscreen shell doesn't display anything sometimes even with a client
Summary: weston fullscreen shell doesn't display anything sometimes even with a client
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-27 00:55 UTC by nerdopolis1
Modified: 2017-10-16 06:05 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
log of the fullscreen Weston server, with weston-fullscreen as a client (7.35 KB, text/plain)
2015-12-27 04:11 UTC, nerdopolis1
Details
log of the fullscreen Weston server, with a weston client as a client (9.39 KB, text/plain)
2015-12-27 04:12 UTC, nerdopolis1
Details
log of the fullscreen client (4.01 KB, text/plain)
2015-12-27 04:13 UTC, nerdopolis1
Details
log of the Weston server that was the client to the fullscreen-shell host (9.15 KB, text/plain)
2015-12-27 04:18 UTC, nerdopolis1
Details

Description nerdopolis1 2015-12-27 00:55:12 UTC
It seems to affect some clients, such as greenisland, and Weston itself (when it's running as a client of a weston instance working as a fullscreen host.


I noticed one interesting pattern though is that previously when running weston as a client of a weston fullscreen shell, nothing will appear, until the screen saver turned on. This was a while back though.

I had just remembered this issue though


the sample weston-fullscreen client works everytime, however
Comment 1 nerdopolis1 2015-12-27 04:11:25 UTC
Created attachment 120704 [details]
log of the fullscreen Weston server, with weston-fullscreen as a client

WAYLAND_DEBUG=server
Comment 2 nerdopolis1 2015-12-27 04:12:12 UTC
Created attachment 120705 [details]
log of the fullscreen Weston server, with a weston client as a client
Comment 3 nerdopolis1 2015-12-27 04:13:01 UTC
Created attachment 120706 [details]
log of the fullscreen client

WAYLAND_DEBUG=client
Comment 4 nerdopolis1 2015-12-27 04:18:02 UTC
Created attachment 120707 [details]
log of the Weston server that was the client to the fullscreen-shell host

WAYLAND_DEBUG=client
Comment 5 nerdopolis1 2015-12-31 01:11:08 UTC
by setting ret = 0; on

http://cgit.freedesktop.org/wayland/weston/tree/fullscreen-shell/fullscreen-shell.c#n495

I get it to work as a workaround (which obviously isn't a good one), I might try to throw a few more print statements in there?
Comment 6 Armin K 2016-08-05 10:40:41 UTC
The problem with this is that it depends on modesetting API, which not all backends support. And even on those that support it, it's still not always guaranteed to work as it may request modeset to a mode not supported by the display. The permanent solution would be to move away from using modeswitching api entirely and play with some scaling.
Comment 7 Armin K 2016-08-05 10:41:39 UTC
I've also noticed same problem under desktop-shell when starting the backend with --sprawl.
Comment 8 n3rdopolis 2017-01-06 01:59:51 UTC
Hi

It appears that this issue is still present, and I am still able to work around it by setting ret = 0;

Thanks
Comment 9 Armin K 2017-02-07 20:05:26 UTC
This patch might fix it:

https://lists.freedesktop.org/archives/wayland-devel/2017-February/033009.html
Comment 10 n3rdopolis 2017-02-10 02:36:05 UTC
Hi

That patch seems to work!

Thanks
Comment 11 Pekka Paalanen 2017-10-13 12:55:03 UTC
I have landed the patch, are we good to close this bug now?
Comment 12 n3rdopolis 2017-10-15 00:44:58 UTC
Hi
Weston appears to be able to run another another weston with the fullscreen-shell shell now.

Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.